--- a/src/resources/static/vis.html
+++ b/src/resources/static/vis.html
@@ -24,7 +24,7 @@
 
 <script src = "https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
 <script src = "https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
-<script src = "/circles.js"></script>
+<script type = "module" src = "/vis.js"></script>
 <script src = "/script.js"></script>
 </body>
 </html>
