--- a/src/resources/vis.html
+++ b/src/resources/vis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Prelude Visualization </title>
-    <link rel="icon" href="static/dot.png" type="image/png">
+    <!-- <link rel="icon" href="static/dot.png" type="image/png"> -->
     <link rel="stylesheet" href="stylesVis.css">
 </head>
 <body>
